# First-project-GenAI

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml  requirements.txt  streamlit_app.py
src/: app_phase0_manual_test.py  phase1_manual_test.py  phase2_manual_test.py  phase3_manual_test.py  phase4_manual_test.py  phase5_manual_test.py  phase6_manual_test.py  phase7_manual_test.py
src/api/: __init__.py  app_manual_run.py
src/api/middleware/: __init__.py  request_metrics.py
src/api/routes/: recommendations.py
src/config/: __init__.py
src/data/: hf_client.py  indexes.py  loader.py  models.py
src/evaluation/: feedback.py
src/frontend/: app.js  index.html  styles.css
src/llm/: client.py  parser.py  prompts.py
src/observability/: metrics.py
src/services/: restaurant_query_service.py
src/utils/: logger.py
tests/api/: test_feedback_endpoint.py  test_metrics_endpoint.py  test_recommendations_api.py
tests/config/: test_config.py
tests/data/: test_loader.py
tests/evaluation/: test_feedback_store.py
tests/frontend/: test_frontend_serving.py
tests/llm/: test_parser_and_prompts.py
tests/observability/: test_metrics_store.py
tests/services/: test_restaurant_query_service.py
tests/utils/: test_logger.py
