[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-restaurant-recommendation"
version = "0.1.0"
description = "AI Restaurant Recommendation Service"
requires-python = ">=3.10"
dependencies = [
    "datasets>=2.20.0",
    "pytest>=8.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "google-generativeai>=0.7.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

